2014-02-11  David S. Miller  <davem@davemloft.net>

	* stdio-common/tst-sscanf.c (main): Use 'long' for 'dummy' when
	processing int_tests.

2014-02-10  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/mips: Move directory from ports/sysdeps/mips.
	* sysdeps/unix/mips: Move directory from ports/sysdeps/unix/mips.
	* sysdeps/unix/sysv/linux/mips: Move directory from
	ports/sysdeps/unix/sysv/linux/mips.
	* README: Update listing for mips-*-linux-gnu and
	mips64-*-linux-gnu.

2014-02-10  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/m68k: Move directory from ports/sysdeps/m68k.
	* sysdeps/unix/sysv/linux/m68k: Move directory from
	ports/sysdeps/unix/sysv/linux/m68k.
	* README: Update listing for m68k-*-linux-gnu.

2014-02-10  Chris Metcalf  <cmetcalf@tilera.com>

	* sysdeps/tile: Move directory from ports/sysdeps/tile.
	* sysdeps/unix/sysv/linux/generic: Move directory from
	ports/sysdeps/unix/sysv/linux/generic.
	* sysdeps/unix/sysv/linux/tile: Move directory from
	ports/sysdeps/unix/sysv/linux/tile.
	* README: Update listing for tile*-*-linux-gnu.

2014-02-10  Ondřej Bílka  <neleai@seznam.cz>

	* assert/assert.c (__assert_fail_base): Use glibc_likely instead __builtin_expect.
	* benchtests/bench-memmem.c (simple_memmem): Likewise.
	* catgets/open_catalog.c (__open_catalog): Likewise.
	* csu/libc-start.c (LIBC_START_MAIN): Likewise.
	* debug/confstr_chk.c: Likewise.
	* debug/fread_chk.c (__fread_chk): Likewise.
	* debug/fread_u_chk.c (__fread_unlocked_chk): Likewise.
	* debug/getgroups_chk.c: Likewise.
	* debug/mbsnrtowcs_chk.c: Likewise.
	* debug/mbsrtowcs_chk.c: Likewise.
	* debug/mbstowcs_chk.c: Likewise.
	* debug/memcpy_chk.c: Likewise.
	* debug/memmove_chk.c: Likewise.
	* debug/mempcpy_chk.c: Likewise.
	* debug/memset_chk.c: Likewise.
	* debug/stpcpy_chk.c (__stpcpy_chk): Likewise.
	* debug/strcat_chk.c (__strcat_chk): Likewise.
	* debug/strcpy_chk.c (__strcpy_chk): Likewise.
	* debug/strncat_chk.c (__strncat_chk): Likewise.